# SQLCPP-7

01/: HW_01_01.drawio
02/: HW-02-01.sql  HW_02_01.drawio
03/: insert-update-delete.sql  select.sql
04/: HW_04_01.sql  HW_04_02.sql  HW_04_03.sql  group-having-join.sql
05/HW-05-01/: CMakeLists.txt  lecture.cpp  main.cpp
